<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/searchText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/searchWordHint"/>

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:onClick="search"
                android:src="@drawable/search"
                android:scaleType="fitXY"
                />

            <ImageButton
                android:id="@+id/alarmButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/alarm"
                android:onClick="createAlarm"
                android:scaleType="fitXY"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</ScrollView>